# HAfAH

./: .gitattributes  .gitignore  .gitlab-ci.yaml  .gitlab-ci.yml  .gitmodules  ApiTests.cmake  CMakeLists.txt  Dockerfile  Dockerfile.jmeter  Dockerfile.postgres12  Dockerfile.postgres13  Dockerfile.rewriter  Dockerfile.setup  README.md  block_day_stats.sql  block_day_stats_all.sql  btracker.sql  compare_req.py  dataflow.txt  docker_entrypoint.sh  main.py  openapi_rewrite.sh  postgres_config.conf  postgrest.conf  process_openapi.py  pyproject.toml  requirements.txt  rewrite_rules.conf  run.sh  run_api.bash  sync.py  testbase.py  webserver.conf
ah/cpp_synchronization/: CMakeLists.txt  main.cpp  readme.txt
fork_extension/: CMakeLists.txt  back_from_fork.cpp  columns_iterator.cpp  initialization.cpp  initializer.cpp  postgres_common.cpp  relation.cpp  relation_from_name.cpp  relation_wrapper.cpp  trigger.cpp  tuple_fields_iterators.cpp  tuples_iterator.cpp
fork_extension/endpoints/: back_from_fork.cpp  on_table_change.cpp  trigger.cpp
fork_extension/include/: back_from_fork.h  columns_iterator.hpp  exceptions.hpp  initialization.hpp  initializer.hpp  logger.hpp  postgres_common.hpp  postgres_functions.hpp  postgres_includes.hpp  relation.hpp  relation_from_name.hpp  relation_wrapper.hpp  sql_commands.hpp  to_bytea.hpp  trigger.h  tuple_fields_iterators.hpp  tuples_iterator.hpp  tuples_iterators.hpp
fork_extension/include/endpoints/: global_synchronization.hpp
fork_extension/include/pq/: copy_session.hpp  copy_to_reversible_tuples_session.hpp  copy_tuples_session.hpp  db_client.hpp  transaction.hpp
fork_extension/include/spi/: spis_session.hpp
fork_extension/pq/: copy_session.cpp  copy_to_reversible_tuples_session.cpp  copy_tuples_session.cpp  db_client.cpp  transaction.cpp
fork_extension/spi/: spi_session.cpp  spis_session.cpp
fork_extension/sql/: db.sql  example.sql  example_3_tables.sql  example_full.sql  example_insert.sql  example_update.sql
src/hive_fork_manager/: CMakeLists.txt  Readme.md  app_api.sql  app_api_impl.sql  authorization.sql  block_day_stats_all_op_view.sql  block_day_stats_view.sql  block_views_for_head_block.sql  blocks_views_for_contexts.sql  events_queue.sql  extract_set_witness_properties.sql  forks.sql  get_impacted_accounts.sql  get_impacted_balances.sql  get_keyauths.sql  get_legacy_style_operation.sql  get_metadata.sql  get_vesting_balance.sql  hive_api_json.sql  hive_fork_manager.control  hive_fork_manager.control.in  hive_fork_manager_update_script_generator.sh  hive_fork_manager_update_script_generator.sh.in  hived_api.sql  hived_api_impl.sql  hived_api_impl_indexes.sql  hived_connections.sql  irreversible_blocks.sql  reversible_blocks.sql  state_provider.sql  table_schema_verification.sql  tools.sql
src/hive_fork_manager/ah_manager/: CMakeLists.txt  readme.txt  utilities.cpp
src/hive_fork_manager/api_helpers/: block_api_support.sql
src/hive_fork_manager/context_rewind/: back_from_fork.sql  data_schema.sql  data_schema_types.sql  detach_table.sql  event_triggers.sql  irreversible.sql  names.sql  register_table.sql  rewind_api.sql  table_schema.sql  triggers.sql
src/hive_fork_manager/doc/: Performance_rewind.md
src/hive_fork_manager/doc/applications/: haf_memo_scanner.py  (+3 more)
src/hive_fork_manager/shared_lib/: CMakeLists.txt  README.md  from_jsonb.cpp  from_jsonb.hpp  jsonb.cpp  jsonb.hpp  operation_base.cpp  operation_base.hpp  pq_operation_base.hpp  svstream.cpp  svstream.hpp  to_jsonb.cpp  to_jsonb.hpp  utilities.cpp
src/hive_fork_manager/state_providers/: accounts.sql  keyauth.sql  metadata.sql  state_provider.template
src/hive_fork_manager/trigger_switch/: trigger_off.sql  trigger_on.sql
src/sql_fork_extension/: CMakeLists.txt  Readme.md  back_from_fork.sql  context.sql  data_schema.sql  detach_table.sql  event_triggers.sql  merge_sql.sh  register_table.sql  trigger_on_insert.sql  trigger_on_registered_table.sql  unregister_table.sql
src/sql_serializer/: CMakeLists.txt  README.md  accounts_collector.cpp  block_num_rendezvous_trigger.cpp  blockchain_data_filter.cpp  data_2_sql_tuple_base.cpp  data_processor.cpp  end_massive_sync_processor.cpp  fast_livesync_data_dumper.cpp  filter_collector.cpp  indexation_state.cpp  indexes_controler.cpp  livesync_data_dumper.cpp  queries_commit_data_processor.cpp  reindex_data_dumper.cpp  sql_serializer.cpp  tables_descriptions.cpp
tests/integration/functional/: CMakeLists.txt  Readme.md  test_dockers.py  test_enum_virtual_ops.py  test_enum_virtual_ops_and_get_ops_in_block.py  test_enum_virtual_ops_merge.py  test_get_account_history-merge.py  test_get_account_history.py  test_get_account_history_and_get_transaction.py  test_get_ops_in_block.py  test_get_ops_in_block_merge.py  test_get_transaction.py  test_get_transaction_merge.py
tests/integration/haf-local-tools/: Readme.md  generate_block_log.py  pyproject.toml  shared-tools  test-tools  tests_api
tests/integration/hafah-local-tools/: pyproject.toml  test-tools  tests_api
tests/unit/: CMakeLists.txt
tests/unit/fork_extension/: CMakeLists.txt  columns_iterator_test.cpp  copy_session_test.cpp  db_client_test.cpp  main.cpp  pq_transaction_test.cpp  relation_test.cpp  spi_session_test.cpp  tuples_fields_iterators_test.cpp  tuples_iterator_test.cpp  tuples_iterators_test.cpp
tests/unit/mockups/: CMakeLists.txt
tests/unit/pq_utils/: CMakeLists.txt  copy_session_test.cpp  db_client_test.cpp  main.cpp  pq_transaction_test.cpp
tests/unit/psql_utils/: CMakeLists.txt  backend_test.cpp  call_cxx.cpp  columns_iterator_test.cpp  custom_configuration_test.cpp  cxx_call_pg_tests.cpp  main.cpp  pg_call_cxx_tests.cpp  relation_test.cpp  spi_query_result_iterator_test.cpp  spi_session_test.cpp  timeout_query_handler_test.cpp  tuples_fields_iterators_test.cpp  tuples_iterator_test.cpp  tuples_query_handler_test.cpp
tests/unit/query_supervisor/: CMakeLists.txt  main.cpp  query_handler_test.cpp
tests/unit/sql_serializer/: CMakeLists.txt  filter_tests.cpp  main.cpp
tests/unit2/: CMakeLists.txt
tests/unit2/tests/: filter_tests.cpp
(+5078 files in other folders)
