[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "tests_api"
version = "0.0.0"
description = "A collective library containing tests for different APIs and tools for benchmarking"
authors = ["Krzysztof Mochocki"]
packages = [
    { include = "benchmarks" },
]


[tool.poetry.dependencies]
python = "^3.10"
prettytable = "3.8.0"
requests = "2.27.1"
