[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "HAfAH"
version = "0.0.0"
description = "HAF Application for Account History"
authors = ["Krzysztof Mochocki <kmochocki@syncad.com>"]
packages = [{ include = "hafah" },
]


[tool.poetry.dependencies]
python = "^3.10"
aiohttp = "3.7.4.post0"
aiopg = "1.2.1"
funcy = "1.16"
jsonrpcserver = "4.2.0"
simplejson = "3.17.2"
haf_local_tools = { path = "haf/tests/integration/haf-local-tools", develop = true }

[tool.poetry.group.dev.dependencies]
mypy = "^1.4.1"

