[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "haf_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by haf python tests."
authors = ["Mateusz Żebrak <mzebrak@syncad.com>"]
packages = [{ include = "haf_local_tools" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.0"
psycopg2-binary = "2.9.1"
pytest = "7.3.1"
pytest-repeat = "0.9.1"
pytest-timeout = "2.0.1"
pytest-xdist = "3.2.0"
shared_tools = { path = "shared-tools", develop = true }
sqlalchemy = "1.4.25"
sqlalchemy-utils = "0.37.9"
test_tools = { path = "test-tools", develop = true }
