[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "haf_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by haf python tests."
authors = ["Mateusz Żebrak <mzebrak@syncad.com>"]
packages = [{ include = "haf_local_tools" },
]


[tool.poetry.dependencies]
python = "^3.10"
pandas = "1.4.0"
psycopg2-binary = "2.9.1"
sqlalchemy = "1.4.25"
sqlalchemy-utils = "0.37.9"
hive_local_tools = { path = "../../../hive/tests/hive-local-tools", develop = true }
