[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hafah_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by hafah python tests."
authors = []
packages = [{ include = "hafah_local_tools" },
]


[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "2.9.1"
pytest = "6.2.5"
pytest-repeat = "0.9.1"
pytest-timeout = "2.0.1"
sqlalchemy = "1.4.25"
sqlalchemy-utils = "0.37.9"
test_tools = { path = "test-tools", develop = true }

