[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hafah_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by hafah python tests."
authors = []
packages = [{ include = "hafah_local_tools" },
]


[tool.poetry.dependencies]
python = "^3.10"
haf_local_tools = { path = "../../../haf/tests/integration/haf-local-tools", develop = true }
pytest-randomly = "^3.15.0"
