[build-system]
requires = ["poetry-core==1.1.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "hafah_local_tools"
version = "0.0.0"
description = "A collective library containing all the tools required by hafah python tests."
authors = []
packages = [{ include = "hafah_local_tools" },
]
source = [
    { name = "PyPI", priority = "primary" },
    { name = "gitlab-schemas", url = "https://gitlab.syncad.com/api/v4/projects/362/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-wax", url = "https://gitlab.syncad.com/api/v4/projects/419/packages/pypi/simple", priority = "supplemental" },
    { name = "gitlab-helpy", url = "https://gitlab.syncad.com/api/v4/projects/434/packages/pypi/simple", priority = "supplemental" },
]


[tool.poetry.dependencies]
python = "^3.10"
haf_local_tools = { path = "../../../haf/tests/integration/haf-local-tools", develop = true }
